--- a/TZSmartLockers/wwwroot/css/dashboard.css
+++ b/TZSmartLockers/wwwroot/css/dashboard.css
@@ -123,9 +123,9 @@
     height:40px;
 }
 
-    .table tbody tr:first-child {
+.table tbody tr:first-child {
     border-top: 5px solid #ccc;
-    }
+}
 
 .lock-rotate-down {
     transform: rotate(180deg);
@@ -155,8 +155,9 @@
         width: 28px;
         height: 28px;
         border-radius: 50%;
-        border: 1px solid #ccc;
-        background-color: #f9f9f9;
+        border: 1px solid #eaeaea;
+        background-color: #eaeaea;
+        color: white;
         display: flex;
         align-items: center;
         justify-content: center;
